<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/user_data">
        <CheckBoxPreference
            android:key="option1"
            android:title="@string/sound"
            android:summary="@string/sumari_sound"/>
        <EditTextPreference
            android:key="option2"
            android:title="@string/username"
            android:summary="@string/identifies_user"
            android:dialogTitle="@string/type_user"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/countris_data">
        <ListPreference
            android:key="option3"
            android:title="@string/country"
            android:summary="@string/user_country"
            android:dialogTitle="@string/select_country"
            android:entryValues="@array/country_codes">

        </ListPreference>
    </PreferenceCategory>
</PreferenceScreen>